<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MOBI3002_CalculatorApp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="20dp"
        android:textAlignment="textEnd"
        android:textSize="70sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/md_theme_light_secondaryContainer"
        android:paddingVertical="16dp"
        android:id="@+id/buttons_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="162dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_secondary"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="20sp"
                android:text="@string/ac"
                android:id="@+id/buttonClear"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_secondary"
                android:textSize="14sp"
                android:text="@string/delete"
                android:id="@+id/buttonDelete"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_primary"
                android:textSize="20sp"
                android:text="@string/divide"
                android:id="@+id/buttonDivide"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:text="@string/seven"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="20sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="20sp"
                android:text="@string/eight"
                android:id="@+id/button8"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="20sp"
                android:text="@string/nine"
                android:id="@+id/button9"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_primary"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="20sp"
                android:text="@string/multiply"
                android:id="@+id/buttonMultiply"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:textSize="20sp"
                android:text="@string/four"
                android:id="@+id/button4"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:textSize="20sp"
                android:text="@string/five"
                android:id="@+id/button5"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:textSize="20sp"
                android:text="@string/six"
                android:id="@+id/button6"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_primary"
                android:textSize="20sp"
                android:text="@string/subtract"
                android:id="@+id/buttonSubtract"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:textSize="20sp"
                android:text="@string/one"
                android:id="@+id/button1"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:textSize="20sp"
                android:text="@string/two"
                android:id="@+id/button2"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:textSize="20sp"
                android:text="@string/three"
                android:id="@+id/button3"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_primary"
                android:textSize="20sp"
                android:text="@string/add"
                android:id="@+id/buttonAdd"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="160dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="20sp"
                android:text="@string/zero"
                android:id="@+id/button0"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="20sp"
                android:text="@string/decimal"
                android:id="@+id/buttonDecimal"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_light_primary"
                android:textSize="20sp"
                android:text="@string/calculate"
                android:id="@+id/buttonCalculate"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>